--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .menu {
   .item {
@@ -6,24 +7,34 @@
     flex-direction: column;
     gap: 10px;
     margin-bottom: 20px;
-  }
 
-  .title {
-    font-size: 12px;
-    font-weight: 200;
-    color: $soft-color;
-    text-transform: uppercase;
-  }
+    .title {
+      font-size: 12px;
+      font-weight: 200;
+      color: $soft-color;
+      text-transform: uppercase;
 
-  .listItem {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    border-radius: 5px;
+      @include lg {
+        display: none;
+      }
+    }
 
-    &:hover {
-      background-color: $soft-bg;
+    .listItem {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: $soft-bg;
+      }
+
+      .listItemTitle {
+        @include lg {
+          display: none;
+        }
+      }
     }
   }
 }
