--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,3 +1,5 @@
+@import "../../styles/responsive.scss";
+
 .navbar {
   width: 100%;
   padding: 20px;
@@ -15,6 +17,12 @@
     display: flex;
     align-items: center;
     gap: 20px;
+
+    .icon {
+      @include sm {
+        display: none;
+      }
+    }
 
     .notification {
       position: relative;
@@ -36,6 +44,10 @@
     }
 
     .user {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
       img {
         width: 26px;
         height: 26px;
