--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,8 @@ a {
   font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
+  height: 100vh;
+  overflow: auto;
 }
 
 .container {
